--- a/stats.html
+++ b/stats.html
@@ -1,158 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="middle2.css">
-  <link rel="stylesheet" href="widget.css">
-  <link rel="stylesheet" href="stats.css">
-  <title>NFZ Stats Viewer</title>
-  <link rel="icon" type="image/x-icon" href="3sicon.png">
-  <script src="script5.js"></script>
-  <!-- Add Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-database-compat.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column; /* Change the flex-direction to column */
-    }
+    <title>NFZ Stats Viewer</title>
+    <link rel="icon" type="image/x-icon" href="3sicon.png">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background: #1a1a1a;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
 
-    .sidebar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%; /* Full width of the screen */
-      background: linear-gradient(to top, #0b0c0c, #18191a);
-      padding: 15px;
-      box-shadow: 0px 0px 12px 12px rgba(0, 0, 0, 0.2);
-      box-sizing: border-box;
-      display: inline-flex;
-      justify-content: center; /* Align content horizontally */
-      z-index: 4; /* Set a higher z-index to make it appear on top */
-      margin-bottom: 00px; /* Add a margin to the bottom to separate it from the content */
-    }
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: linear-gradient(to top, #0b0c0c, #18191a);
+            padding: 15px;
+            box-shadow: 0px 0px 12px 12px rgba(0, 0, 0, 0.2);
+            box-sizing: border-box;
+            display: inline-flex;
+            justify-content: center;
+            z-index: 4;
+            margin-bottom: 0px;
+        }
 
-      .text-box {
-    background: #080808;
-    color: #0e0e0e;
-    padding: 0px;
-    z-index: 3;
-    width: 100%;
-    margin: 00px; /* Add margin to all sides */
-    text-align: center; /* Align the text to the right */
-    }
+        .text-box {
+            background: #080808;
+            color: #0e0e0e;
+            padding: 0px;
+            z-index: 3;
+            width: 100%;
+            margin: 0px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+        }
 
-    @keyframes loadingAnim {
-    0% {
-      transform: translateY(0px);
-      filter: opacity(0);
-    }
-    25% {
-      transform: translateY(0px);
-      filter: opacity(100%);
-    }
-  }
+        .content {
+            flex: 1;
+            padding: 20px;
+            position: relative;
+            z-index: 1;
+            margin-top: 70px;
+        }
 
-    .content {
-      flex: 1;
-      padding: 20px;
-      position: relative; /* Add relative positioning to allow the content to be behind the sidebar */
-      z-index: 1; /* Set a lower z-index to ensure content is behind the sidebar */
-    }
+        .levels-button,
+        .leglist-button,
+        .stats-button {
+            background-color: #141414;
+            color: rgb(221, 221, 221);
+            padding: 10px 20px;
+            border: 2px solid #c7c7c7;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+            font-family: Arial, sans-serif;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            font-weight: bold;
+            display: block;
+            margin-bottom: 0px;
+            margin-left: 20px;
+            margin-right: 20px;
+            box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0);
+        }
 
-    .levels-button,
-    .leglist-button,
-    .stats-button {
-      background-color: #141414;
-      color: rgb(221, 221, 221);
-      padding: 10px 20px;
-      border: 2px solid #c7c7c7;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      text-align: center;
-      font-family: Arial, sans-serif; /* Change the font family as needed */
-      text-decoration: none; /* Remove underline */
-      transition: background-color 0.3s ease, transform 0.3s ease; /* Add transition for smooth color and transform change */
-      font-weight: bold; /* Add font-weight: bold; for bold text */
-      display: block;
-      margin-bottom: 0px;
-      margin-left: 20px;
-      margin-right: 20px;
-      box-shadow: 0px 0px 3px 3px rgba(102, 102, 102, 0);
-    }
+        .levels-button:hover,
+        .leglist-button:hover,
+        .stats-button:hover {
+            border: 2px solid #636363;
+            background-color: #f2f2f2;
+            transform: scale(1.05);
+            color: rgb(5, 5, 5);
+        }
 
-    .levels-button:hover,
-    .leglist-button:hover,
-    .stats-button:hover {
-      border: 2px solid #636363;
-      background-color: #f2f2f2; /* Change to the desired hover background color */
-      transform: scale(1.05); /* Increase scale on hover (adjust as needed) */
-      color: rgb(5, 5, 5);
-    }
+        .stats-sheet {
+            width: 100%;
+            height: calc(100vh - 120px);
+            position: fixed;
+            top: 70px;
+            left: 0;
+            right: 0;
+            bottom: 20px;
+            z-index: 2;
+        }
 
-    .text-box2 {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #ffffff; /* Set the background color to white */
-    color: #000000; /* Set the text color to black */
-    padding: 10px; /* Add padding as needed */
-    font-weight: bold;
-    border-radius: 4px;
-    z-index: 3;
-    width: 1000px; /* Set the width of the box */
-    text-align: center; /* Align the text to the center */
-    }
+        .stats-sheet iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
 
-    .stats-sheet {
-      width: 100%;
-      height: 100%;
-      top: -50px;
-      z-index: 3;
-    }
-
-    
-    .levels-button:focus,
-    .leglist-button:focus,
-    .stats-button:focus {
-      outline: none;
-    }
-  </style>
+        @keyframes loadingAnim {
+            0% {
+                transform: translateY(0px);
+                filter: opacity(0);
+            }
+            25% {
+                transform: translateY(0px);
+                filter: opacity(100%);
+            }
+        }
+    </style>
 </head>
 <body>
-  <!-- Widget Container -->
-  <div class="popup-container" id="popup">
-    <div class="popup-content">
-      <h2 class="popup-title">Level Details</h2>
-      <p class="popup-info"><a id="popup-video" target="_blank">Watch on YouTube</a></p>
-      <p class="popup-info"><span id="popup-name" style="font-size: 40px;">Your Text Here</span></p>
-      <p class="popup-info">ID: <span id="popup-id"></span></p>
-      <p class="popup-info">Creator: <span id="popup-author"></span></p>
-      <p class="popup-info">Verifier: <span id="popup-verifier"></span></p>
-      <button class="popup-close" id="popup-close">Close</button>
+    <div class="sidebar">
+        <a href="levels.html" class="levels-button">Main List</a>
+        <a href="stats.html" class="stats-button">Stats Viewer</a>
     </div>
-  </div>
-  <div class="sidebar">
-    <a href="levels.html" class="levels-button">Main List</a>
-    <a href="stats.html" class="stats-button">Stats Viewer</a>
-  </div>
-  <div class="content">
-    <div id="statsContainer" class="stats-container">
-      <!-- Stats will be loaded here by script4.js -->
+
+    <div class="stats-sheet">
+        <iframe 
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTKr4elbKFkQbBCx_6JN1wBkMCWIN9NA83-aLWIZ3Rg-qqdGHvKd2d38LVNN5rUVqyCAHVi-NFa4NvG/pubhtml?gid=2056152085&amp;single=true&amp;widget=true&amp;headers=false"
+        ></iframe>
     </div>
-  </div>
-  <div class="stats-sheet">
-    <iframe 
-src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTKr4elbKFkQbBCx_6JN1wBkMCWIN9NA83-aLWIZ3Rg-qqdGHvKd2d38LVNN5rUVqyCAHVi-NFa4NvG/pubhtml?gid=2056152085&amp;single=true&amp;widget=true&amp;headers=false"
-width="100%" height="100%"
-      ></iframe>
-  </div>
-  <div class="text-box">
-    <p>©Mariner 2024</p>
-  </div>
-  <script src="script4.js"></script>
+
+    <div class="text-box">
+        <p>©Mariner 2024</p>
+    </div>
 </body>
 </html>
